--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
